# notebooks

./: .gitignore  README.md
battle_annotation/: Analyse-annotations.ipynb  Annotate-Data.ipynb  README.md  requirements.txt
chatbotarena/: pyproject.toml
chatbotarena/time-analysis/: README.md  data_analysis.py  pull_lmarena.py
data_quality_prompt/: analyse-nemotron-cc.ipynb  requirements.txt
logs-opensci-ref/: analyse-logs.ipynb  loss_discrepancy.ipynb  parse_data.py  pyproject.toml
plot_results_release/: analyse_missing.py  dataset_scaling.py  dataset_scaling_1T.py  dataset_scaling_1T_per_task.py  dataset_scaling_300B.py  dataset_scaling_300B_per_task.py  evaldata_utils.py  evaluation-analysis.ipynb  figure_dataset_scale_1.7B_1T_separate_evals.py  figure_dataset_scale_1.7B_300B_separate_evals.py  figure_dataset_scaling_300B.py  figure_scaling.py  figure_utils.py  log_dir_name_mapping.jsonl  mapping.json  requirements.txt  table.py  table_context_length.py
prelude-evals-wip/: README.md  analyse_multilingual.py  compare_prelude_ellamind_suite.csv  compare_prelude_ellamind_suite.py  eval_results_baby_all.csv  generate_list.py  main.py  models-to-evaluate.txt  pyproject.toml
quality-annotation/: README.md  TODOs.md  analyse_data.py  annotate_data.py  check_stats.py  column_analysis.py  predict_propella_quality.py  pyproject.toml  utils.py
