[project]
name = "chatbotarena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "fast-langdetect>=0.3.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-together>=0.3.0",
    "matplotlib>=3.10.3",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "plotly>=6.5.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.20.1",
    "huggingface-hub>=0.23.0",
]
